--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
     <section id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-light static-top">
             <div class="container-fluid" id="navbarSupportedContent">
-                <a class="navbar-brand" href="./index.html"><img src="./images/BurgerPlus_logo_bar.png" /></a>
+                <a class="navbar-brand" href="./index.html" title="BurgerPlus home"><img src="./images/BurgerPlus_logo_bar.png" alt="BurgerPlus logo" title="BurgerPlus logo" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="hori-selector">
+                        <div class="left"></div>
+                        <div class="right"></div>
+                    </div>
                     <ul class="navbar-nav ml-auto">
-                        <div class="hori-selector">
-                            <div class="left"></div>
-                            <div class="right"></div>
-                        </div>
                         <li class="nav-item active" value="1">
                             <a class="nav-link" href="#" onClick="recp('1')">Home</a>
                         </li>
@@ -105,7 +105,7 @@
 
 <body>
 
-    <div class="text-center" style="margin-top: 60px; margin-bottom: 100px;">
+    <div class="text-center hero-spacing">
         <div id="one">
             <div class="first"></div>
             <h1>HOME</h1>
@@ -128,7 +128,7 @@
 
                     <!-- --------------------------- Grid column 1 --------------------------- -->
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                        <img src="./images/BurgerPlus_logo.png" style="width: 150px;" />
+                        <img src="./images/BurgerPlus_logo.png" class="footer-logo" alt="BurgerPlus logo" title="BurgerPlus logo" />
                         <p>BurgerPlus we provides you a good quality food service and we are ready to serve your
                             favourite burgers.</p>
                     </div>
@@ -136,8 +136,7 @@
                     <!-- --------------------------- Grid column 2 --------------------------- -->
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-5">
                         <h6 class="text-uppercase mb-4 font-weight-bold">Menu</h6>
-                        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
-                            style="width: 120px; height: 2px; background-color: #F5E51B;" />
+                        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto accent-hr" />
                         <ul class="footer-links">
                             <li><a href="">Home</a></li>
                             <li><a href="">Foods</a></li>
@@ -151,8 +150,7 @@
                     <!-- --------------------------- Grid column 3 --------------------------- -->
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-5">
                         <h6 class="text-uppercase mb-4 font-weight-bold">Services</h6>
-                        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
-                            style="width: 120px; height: 2px; background-color: #F5E51B;" />
+                        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto accent-hr" />
                         <ul class="footer-links">
                             <li><a href="">24H Support</a></li>
                             <li><a href="">Online Payment</a></li>
@@ -166,20 +164,19 @@
                     <!-- --------------------------- Grid column 4 --------------------------- -->
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-5">
                         <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-                        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
-                            style="width: 120px; height: 2px; background-color: #F5E51B;" />
+                        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto accent-hr" />
                         <ul class="footer-links">
                             <li><a href="">+94 *** ****</a></li>
                             <li><a href="">burgerplus.to@gmail.com</a></li>
                             <li><a href="">BurgerPlus Official</a></li>
-                            <li><a href="">BurgerPlus.foods</li>
+                            <li><a href="">BurgerPlus.foods</a></li>
                             <li><a href="">BurgerPlus, Food Street, <br>Destiny Island</a></li>
                         </ul>
                     </div>
                 </div>
 
                 <!-- --------------------------- Copyright --------------------------- -->
-                <hr style="background-color: #3C3F41;" />
+                <hr class="footer-sep" />
                 <div class="text-center">Developed by Dileepa Bandara
                     <p>© 2020 dileepabandara.dev</p>
                 </div>
